# CppUtestExample

./: CMakeLists.txt
inc/: main.h
src/: CMakeLists.txt  main.c
tst/: CMakeLists.txt  test.cpp  test_run.cpp
